overlapping items bugfixes and style changes

--- a/app/assets/stylesheets/editor.css.scss
+++ b/app/assets/stylesheets/editor.css.scss
@@ -125,6 +125,14 @@ body {
 			}
 		}
 
+		.icon-container {
+			width: 15px;
+
+			.element-icon {
+				margin: 0 auto;
+			}
+		}
+
 	}
 }
 
