--- a/app/assets/stylesheets/sites.css.scss
+++ b/app/assets/stylesheets/sites.css.scss
@@ -23,7 +23,6 @@ $focus-bad: #cf383a;
 body {
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   font-weight: 400;
-  // background: url("http://www.beingdevelopers.com/wp-content/uploads/2014/04/html-background-1716x700_c.jpg");
   background-size: cover;
   list-style-type: none;
 }
@@ -296,14 +295,15 @@ nav .error {
 .edit-site-button {
   white-space: nowrap;
 
-  .page-edit span {
-    text-overflow: ellipsis;
-    width: 194px;
-    overflow: hidden;
-    display: inline-block;
-    margin-top: 13px;
+  .page-edit {
+    span {
+      text-overflow: ellipsis;
+      width: 194px;
+      overflow: hidden;
+      display: inline-block;
+      margin-top: 13px;
+    }
   }
-
 }
 
 .function-buttons {
@@ -517,8 +517,6 @@ nav .error {
         }
       }
 
-
-
       .background-button {
         border-bottom: 1px solid $border-grey;
         margin-top: 3px;
@@ -547,10 +545,6 @@ nav .error {
           i.fa-pencil, i.fa-trash {
             opacity: 1
           }
-
-          // i.fa-bars {
-          //   color: $app-text-color;
-          // }
 
           .pages-label {
             color: $app-text-color;
